--- a/src/styles/_type.scss
+++ b/src/styles/_type.scss
@@ -62,6 +62,26 @@ h3 {
 /// Fonts Loaded via our font loading strategy
 ///
 
+footer {
+  [class$='-address'] {
+
+    ul {
+      list-style: none;
+      padding: 0;
+      text-transform: uppercase;
+
+      li {
+        margin: 1ex 0;
+      }
+
+      a {
+        color: currentColor;
+      }
+    }
+  }
+}
+
+
 .ilnido-section,
 footer {
   &__content,
@@ -82,11 +102,6 @@ footer {
       padding: 0;
 
       &__button {
-        background-color: transparentize($text-color, 0.2);
-        border: solid 3px $in-yellow;
-        border-radius: 1ex;
-        list-style-type: none;
-        text-align: center;
 
         @include media('>=phone', '<=tablet') {
           font-size: 1.25rem;
@@ -103,6 +118,12 @@ footer {
         @include media('>=desktop') {
           max-width: 17.5em;
         }
+
+        background-color: transparentize($text-color, 0.2);
+        border: solid 3px $in-yellow;
+        border-radius: 1ex;
+        list-style-type: none;
+        text-align: center;
 
         a {
           color: $in-yellow;
@@ -138,22 +159,7 @@ footer {
   }
 }
 
-footer {
-  ul {
-    color: $in-yellow;
-    list-style: none;
-    padding: 0;
-    text-transform: uppercase;
 
-    li {
-      margin: 1ex 0;
-    }
-
-    a {
-      color: currentColor;
-    }
-  }
-}
 
 nav {
   font-family: 'Nunito', sans-serif;
